--- a/cssMemSlider/css/style.css
+++ b/cssMemSlider/css/style.css
@@ -1,55 +1,166 @@
-*{
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
 }
-body{
-	background-color: #25282A;
+
+body {
+    background-color: #25282A;
 }
-.wrap{
-	/*max-width: 1440px;
+
+.wrap {
+    /*max-width: 1440px;
 	width: 100%;
 	min-height: 80vh;
 	height: 1px;*/
-	margin: 0 auto;
-	position: relative;	
-	width: 80vw;
-	height: 50vw;
+    margin: 50px auto;
+    position: relative;
+    width: 65vw;
+    height: 35vw;
 }
-.wrap > input{
-	display:  none;
+
+.wrap>input {
+    display: none;
 }
-.slider {	
-	height: inherit;
-	height: 100%;
-	overflow: hidden;
-	position: relative;
-	width: inherit;
-	-webkit-box-shadow: 0 0 20px rgba(0, 0, 0, .5);
-	-moz-box-shadow: 0 0 20px rgba(0, 0, 0, .5);
-	-o-box-shadow: 0 0 20px rgba(0, 0, 0, .5);
-	box-shadow: 0 0 20px rgba(0, 0, 0, .5);
+
+.slider {
+    height: inherit;
+    height: 100%;
+    overflow: hidden;
+    position: relative;
+    width: inherit;
+    -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, .5);
+    -moz-box-shadow: 0 0 20px rgba(0, 0, 0, .5);
+    -o-box-shadow: 0 0 20px rgba(0, 0, 0, .5);
+    box-shadow: 0 0 20px rgba(0, 0, 0, .5);
+    z-index: 10;
 }
+
+.slides {
+    height: inherit;
+    position: absolute;
+    width: inherit;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.slide1 {
+    background-image: url('.././img/1.jpg');
+}
+
+.slide2 {
+    background-image: url('.././img/2.jpg');
+}
+
+.slide3 {
+    background-image: url('.././img/3.jpg');
+}
+
+.slide4 {
+    background-image: url('.././img/4.jpg');
+}
+
+.slide5 {
+    background-image: url('.././img/5.jpg');
+}
+
+.wrap .controls {
+    /*left: 50%;*/
+    right: 0;
+    margin-left: -98px;
+    position: absolute;
+}
+
+.wrap label {
+    cursor: pointer;
+    display: inline-block;
+    height: 8px;
+    margin: 25px 12px 0 16px;
+    position: relative;
+    width: 8px;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -o-border-radius: 50%;
+    border-radius: 50%;
+}
+
+.wrap label:after {
+    border: 2px solid #ddd;
+    content: " ";
+    display: block;
+    height: 12px;
+    left: -4px;
+    position: absolute;
+    top: -4px;
+    width: 12px;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -o-border-radius: 50%;
+    border-radius: 50%;
+}
+
+.wrap label {
+    cursor: pointer;
+    display: inline-block;
+    height: 8px;
+    margin: 25px 12px 0 16px;
+    position: relative;
+    width: 8px;   
+    border-radius: 50%;   
+    transition: background ease-in-out .5s;
+}
+
+.wrap label:hover,
+#slide1:checked~.controls label:nth-of-type(1),
+#slide2:checked~.controls label:nth-of-type(2),
+#slide3:checked~.controls label:nth-of-type(3),
+#slide4:checked~.controls label:nth-of-type(4),
+#slide5:checked~.controls label:nth-of-type(5) {
+    background: #ccc;
+}
+
 .slides {
 	height: inherit;
+	opacity: 0;
 	position: absolute;
 	width: inherit;
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center;
+	z-index: 0;		
+	transition: transform ease-in-out .5s, opacity ease-in-out .5s;
 }
-.slide1{	
-	background-image: url('.././img/1.jpg');
+
+
+#slide1:checked ~ .slider > .slide1,
+#slide2:checked ~ .slider > .slide2,
+#slide3:checked ~ .slider > .slide3,
+#slide4:checked ~ .slider > .slide4,
+#slide5:checked ~ .slider > .slide5 {
+	opacity: 1;
+	z-index: 1;	
 }
-.slide2{
-	background-image: url('.././img/2.jpg');
+
+#slide1:checked ~ .blocktext > .text1,
+#slide2:checked ~ .blocktext > .text2,
+#slide3:checked ~ .blocktext > .text3,
+#slide4:checked ~ .blocktext > .text4,
+#slide5:checked ~ .blocktext > .text5
+ {
+	opacity: 1;
+	z-index: 1;	
+	color:  white;
+	transform: translateX(0px);
 }
-.slide3{
-	background-image: url('.././img/3.jpg');
+.blocktext{
+	margin-top: 20px;
+	position: relative;
 }
-.slide4{
-	background-image: url('.././img/4.jpg');
-}
-.slide5{
-	background-image: url('.././img/5.jpg');
+.text{
+	opacity: 0;
+	z-index: 0;
+	position: absolute;
+	transform: translateX(2000px);
+	transition: .5s;
+	font-size: 34px;
+	font-weight: 100;
 }
