--- a/cssMemSlider/css/style.css
+++ b/cssMemSlider/css/style.css
@@ -3,21 +3,22 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
+
 }
 
 body {
     background-color: #25282A;
+    width: 100%;
+    max-height: 100vh;
+     margin: 0 auto;
+     overflow: hidden;
 }
 
 .wrap {
-    /*max-width: 1440px;
-	width: 100%;
-	min-height: 80vh;
-	height: 1px;*/
     margin: 50px auto;
     position: relative;
     width: 65vw;
-    height: 35vw;
+    height: 37vw;
 }
 
 .wrap>input {
@@ -29,12 +30,8 @@ body {
     height: 100%;
     overflow: hidden;
     position: relative;
-    width: inherit;
-    -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, .5);
-    -moz-box-shadow: 0 0 20px rgba(0, 0, 0, .5);
-    -o-box-shadow: 0 0 20px rgba(0, 0, 0, .5);
-    box-shadow: 0 0 20px rgba(0, 0, 0, .5);
-    z-index: 10;
+    width: inherit;    
+    border-radius: 10px;
 }
 
 .slides {
@@ -79,10 +76,7 @@ body {
     height: 8px;
     margin: 25px 12px 0 16px;
     position: relative;
-    width: 8px;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -o-border-radius: 50%;
+    width: 8px;    
     border-radius: 50%;
 }
 
@@ -107,8 +101,8 @@ body {
     height: 8px;
     margin: 25px 12px 0 16px;
     position: relative;
-    width: 8px;   
-    border-radius: 50%;   
+    width: 8px;
+    border-radius: 50%;
     transition: background ease-in-out .5s;
 }
 
@@ -122,45 +116,66 @@ body {
 }
 
 .slides {
-	height: inherit;
-	opacity: 0;
-	position: absolute;
-	width: inherit;
-	z-index: 0;		
-	transition: transform ease-in-out .5s, opacity ease-in-out .5s;
+    height: inherit;
+    opacity: 0;
+    position: absolute;
+    width: inherit;
+    z-index: 0;
+    transition: transform ease-in-out .5s, opacity ease-in-out .5s;
 }
 
 
-#slide1:checked ~ .slider > .slide1,
-#slide2:checked ~ .slider > .slide2,
-#slide3:checked ~ .slider > .slide3,
-#slide4:checked ~ .slider > .slide4,
-#slide5:checked ~ .slider > .slide5 {
-	opacity: 1;
-	z-index: 1;	
+#slide1:checked~.slider>.slide1,
+#slide2:checked~.slider>.slide2,
+#slide3:checked~.slider>.slide3,
+#slide4:checked~.slider>.slide4,
+#slide5:checked~.slider>.slide5 {
+    opacity: 1;
+    z-index: 1;
 }
 
-#slide1:checked ~ .blocktext > .text1,
-#slide2:checked ~ .blocktext > .text2,
-#slide3:checked ~ .blocktext > .text3,
-#slide4:checked ~ .blocktext > .text4,
-#slide5:checked ~ .blocktext > .text5
- {
-	opacity: 1;
-	z-index: 1;	
-	color:  white;
-	transform: translateX(0px);
+#slide1:checked~.blocktext>.text1,
+#slide2:checked~.blocktext>.text2,
+#slide3:checked~.blocktext>.text3,
+#slide4:checked~.blocktext>.text4,
+#slide5:checked~.blocktext>.text5 {
+    opacity: 1;
+    z-index: 1;
+    color: white;
+    transform: translateX(0px);
 }
-.blocktext{
-	margin-top: 20px;
-	position: relative;
+
+.blocktext {
+    margin-top: 10px;
+    position: relative;
 }
-.text{
-	opacity: 0;
-	z-index: 0;
-	position: absolute;
-	transform: translateX(2000px);
-	transition: .5s;
-	font-size: 34px;
-	font-weight: 100;
+
+.text {
+    opacity: 0;
+    z-index: 0;
+    position: absolute;
+    transform: translateX(-500px);
+    transition: .7s;
+    font-size: 30px;
+    font-weight: 100;
+}
+
+@media (max-width: 1024px) {
+    .wrap{
+    	margin: 50px auto;
+    position: relative;
+    width: 85vw;
+    height: 47vw;
+    }
+    .blocktext {
+    margin-top: 60px;
+    position: relative;
+}
+    .text {    
+    font-size: 24px;    
+}
+.wrap .controls {
+    left: 50%;    
+}
+
 }
